--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ before_install:
 script:
   - docker run -e CI=true cutening/react-test npm test
 
+# after pass test
 after_success:
   - docker build -t cutening/multi-client ./client
   - docker build -t cutening/multi-worker ./worker
